--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -80,6 +80,12 @@
             <version>1.1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>bson</artifactId>
+            <version>3.4.3</version>
+        </dependency>
+
 
     </dependencies>
 
