--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -86,6 +86,13 @@
             <version>3.4.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.flatbuffers/flatbuffers-java -->
+        <dependency>
+            <groupId>com.google.flatbuffers</groupId>
+            <artifactId>flatbuffers-java</artifactId>
+            <version>1.12.0</version>
+        </dependency>
+
 
     </dependencies>
 
