--- a/Rust/Cargo.toml
+++ b/Rust/Cargo.toml
@@ -10,4 +10,5 @@ edition = "2018"
 serde = { version = "1.0", features = ["derive"] }
 
 # serde_json is just for the example, not required in general
+bytes = "0.5"
 serde_json = "1.0"
