--- a/Rust/Cargo.toml
+++ b/Rust/Cargo.toml
@@ -13,6 +13,21 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+bincode = "1.3.1"
+serde_cbor = "0.11.1"
+rmp-serde = "0.14.3"
+serde_yaml = "0.8"
+toml = "0.5"
+serde-pickle = "0.6"
+ron = "0.6.0"
+bson = "1.0.0"
+avro-rs = "0.10.0"
+json5 = "0.2.8"
+postcard = "0.5.0"
+smallvec = "1.0"
+flexbuffers = "0.1.1"
+
 bytes = "0.5"
 rand = "0.7"
 chrono = "0.4"
+bytebuffer-rs = "0.3.1"
