finish sequential read

--- a/Rust/Cargo.toml
+++ b/Rust/Cargo.toml
@@ -6,9 +6,8 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-#[[bin]]
-#name = "DataSerialization"
-#path = "src/benchmarks/DataSerialization.rs"
+[build]
+rustflags = ["-Awarnings"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
