--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,7 +31,7 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -yq libboost-dev libgsl-dev
       
     - name: Install Google Protobuf
-      run: $ sudo apt-get update && sudo apt-get install -yq autoconf automake libtool curl make g++ unzip
+      run: sudo apt-get update && sudo apt-get install -yq autoconf automake libtool curl make g++ unzip
     
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
