--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,8 +33,9 @@ jobs:
     - name: Install Boost
       run: sudo apt-get install -yq libboost-dev libgsl-dev
       
-    - name: Install Google Protobuf
-      run: sudo apt-get install autoconf automake libtool curl make g++ unzip
+    - name: Install Google Protobuf Install pre-Requiremnts
+      run: sudo apt-get install autoconf automake libtool curl make g++ unzip && rm -rf Apps && mkdir Apps && cd Apps && 
+            wget https://github.com/protocolbuffers/protobuf/releases/download/v3.11.0/protobuf-cpp-3.11.0.tar.gz && ls -l && cd ..
     
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
