--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -33,11 +33,16 @@ jobs:
     - name: Install Boost
       run: sudo apt-get install -yq libboost-dev libgsl-dev
       
-    - name: Install Google Protobuf Install pre-Requiremnts
+    - name: Install Google Protobuf
       run: sudo apt-get install autoconf automake libtool curl make g++ unzip && rm -rf Apps && mkdir Apps && cd Apps && 
             wget https://github.com/protocolbuffers/protobuf/releases/download/v3.11.0/protobuf-cpp-3.11.0.tar.gz && ls -l && 
             tar -xvzf protobuf-cpp-3.11.0.tar.gz && cd protobuf-3.11.0 && sudo ./configure && sudo make && sudo make check && make install &&
             sudo ldconfig
+            
+    - name: Install BSON
+      run: cd Apps && sudo wget https://github.com/mongodb/mongo-c-driver/releases/download/1.16.2/mongo-c-driver-1.16.2.tar.gz &&
+           tar -xvzf mongo-c-driver-1.16.2.tar.gz && cd mongo-c-driver-1.16.2 && sudo mkdir cmake-build && sudo cd cmake-build &&
+           sudo cmake -DENABLE_AUTOMATIC_INIT_AND_CLEANUP=OFF .. && sudo make install && cd ..
     
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
