--- a/.github/workflows/JavaMaven.yml
+++ b/.github/workflows/JavaMaven.yml
@@ -19,8 +19,8 @@ jobs:
       uses: actions/cache@v1
       with:
         path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/Java/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
     - name: Build
-      run: mvn package -P rat
+      run: mvn clean compile assembly:single
