--- a/.github/workflows/JavaMaven.yml
+++ b/.github/workflows/JavaMaven.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/cache@v1
       with:
         path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/Java/pom.xml') }}
+        key: ${{ runner.os }}-maven-${{ hashFiles('Java/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
     - name: Build
