--- a/.github/workflows/JavaMaven.yml
+++ b/.github/workflows/JavaMaven.yml
@@ -23,4 +23,4 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
     - name: Build
-      run: cd Java && mvn clean compile assembly:single
+      run: cd Java && ./makeClean.sh
