--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,67 +24,60 @@ jobs:
     - name: Update OS
       run: sudo apt-get update
     
-    - name: Install clang
-      run: sudo apt-get install -yq clang
-    
-    - name: Install Rapidjson   
+    #- name: Install clang
+    #  run: sudo apt-get install -yq clang
+      
+    - name: Setup clang
+      uses: actions/setup-clang@v1
+      with:
+        clang-version: 10
+      #######################################################
+#       - name: Cache node modules
+#         uses: actions/cache@v2
+#         env:
+#           cache-name: cache-node-modules
+#         with:
+#           # npm cache files are stored in `~/.npm` on Linux/macOS
+#           path: ~/.npm
+#           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+#           restore-keys: |
+#             ${{ runner.os }}-build-${{ env.cache-name }}-
+#             ${{ runner.os }}-build-
+#             ${{ runner.os }}-
+            
+    ##############################################################
+    - name: Setup Rapidjson   
       run: sudo apt-get install -yq rapidjson-dev
       
-    - name: Install Boost
-      run: sudo apt-get install -yq libboost-dev libgsl-dev
+#     - name: Install Boost
+#       run: sudo apt-get install -yq libboost-dev libgsl-dev
       
-    - name: Install Google Protobuf
-      run: sudo apt-get install autoconf automake libtool curl make g++ unzip && rm -rf Apps && mkdir Apps && cd Apps && 
-            wget https://github.com/protocolbuffers/protobuf/releases/download/v3.11.0/protobuf-cpp-3.11.0.tar.gz && ls -l && 
-            tar -xvzf protobuf-cpp-3.11.0.tar.gz && cd protobuf-3.11.0 && sudo ./configure && sudo make && sudo make check && make install &&
-            sudo ldconfig
+#     - name: Install Google Protobuf
+#       run: sudo apt-get install autoconf automake libtool curl make g++ unzip && rm -rf Apps && mkdir Apps && cd Apps && 
+#             wget https://github.com/protocolbuffers/protobuf/releases/download/v3.11.0/protobuf-cpp-3.11.0.tar.gz && ls -l && 
+#             tar -xvzf protobuf-cpp-3.11.0.tar.gz && cd protobuf-3.11.0 && sudo ./configure && sudo make && sudo make check && make install &&
+#             sudo ldconfig
             
-    - name: Install BSON
-      run: cd Apps && sudo wget https://github.com/mongodb/mongo-c-driver/releases/download/1.16.2/mongo-c-driver-1.16.2.tar.gz &&
-           tar -xvzf mongo-c-driver-1.16.2.tar.gz && cd mongo-c-driver-1.16.2 && sudo mkdir cmake-build && sudo cd cmake-build &&
-           sudo cmake -DENABLE_AUTOMATIC_INIT_AND_CLEANUP=OFF .. && sudo make install && cd ..
+#     - name: Install BSON
+#       run: cd Apps && sudo wget https://github.com/mongodb/mongo-c-driver/releases/download/1.16.2/mongo-c-driver-1.16.2.tar.gz &&
+#            tar -xvzf mongo-c-driver-1.16.2.tar.gz && cd mongo-c-driver-1.16.2 && sudo mkdir cmake-build && sudo cd cmake-build &&
+#            sudo cmake -DENABLE_AUTOMATIC_INIT_AND_CLEANUP=OFF .. && sudo make install && cd ..
     
-    - name: Create Build Environment
-      # Some projects don't allow in-source building, so create a separate build directory
-      # We'll use this as our working directory for all subsequent commands
-      run: cmake -E make_directory ${{github.workspace}}/build/C++
-      working-directory: ${{github.workspace}}/C++/src
+#     - name: Create Build Environment
+#       run: cmake -E make_directory ${{github.workspace}}/build/C++
+#       working-directory: ${{github.workspace}}/C++/src
       
-    - name: Configure CMake
-      # Use a bash shell so we can use the same syntax for environment variable
-      # access regardless of the host operating system
-      shell: bash
-      working-directory: ${{github.workspace}}/build/C++
-      # Note the current convention is to use the -S and -B options here to specify source 
-      # and build directories, but this is only available with CMake 3.13 and higher.  
-      # The CMake binaries on the Github Actions machines are (as of this writing) 3.12
-      run: cmake $GITHUB_WORKSPACE/C++/src -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-    
-    #- name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-    #  run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-    
-    - name: Build
-      working-directory: ${{github.workspace}}/C++/build
-      shell: bash
-      # Execute the build.  You can specify a specific target with "--target <NAME>"
-      run: cmake --build . --config $BUILD_TYPE
+#     - name: Configure CMake
+#       shell: bash
+#       working-directory: ${{github.workspace}}/build/C++
+#       run: cmake $GITHUB_WORKSPACE/C++/src -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+     
+#     - name: Build
+#       working-directory: ${{github.workspace}}/C++/build
+#       shell: bash    
+#       run: cmake --build . --config $BUILD_TYPE
 
-    #- name: Build
-      # Build your program with the given configuration
-    #  run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-    
-    - name: Test
-      working-directory: ${{github.workspace}}/build
-      shell: bash
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C $BUILD_TYPE
-
-    #- name: Test
-    #  working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-   #   run: ctest -C ${{env.BUILD_TYPE}}
-      
+#     - name: Test
+#       working-directory: ${{github.workspace}}/build
+#       shell: bash
+#       run: ctest -C $BUILD_TYPE   
