--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,13 +24,9 @@ jobs:
     - name: Update OS
       run: sudo apt-get update
     
-    #- name: Install clang
-    #  run: sudo apt-get install -yq clang
+    - name: Install clang
+      run: sudo apt-get install -yq clang
       
-    - name: Setup clang
-      uses: actions/setup-clang@v1
-      with:
-        clang-version: 10
       #######################################################
 #       - name: Cache node modules
 #         uses: actions/cache@v2
