--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,28 +27,15 @@ jobs:
     - name: Install clang
       run: sudo apt-get install -yq clang
       
-      #######################################################
-#       - name: Cache node modules
-#         uses: actions/cache@v2
-#         env:
-#           cache-name: cache-node-modules
-#         with:
-#           # npm cache files are stored in `~/.npm` on Linux/macOS
-#           path: ~/.npm
-#           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-#           restore-keys: |
-#             ${{ runner.os }}-build-${{ env.cache-name }}-
-#             ${{ runner.os }}-build-
-#             ${{ runner.os }}-
-            
-    ##############################################################
-    - name: Setup Rapidjson   
+    - name: Install Rapidjson   
       run: sudo apt-get install -yq rapidjson-dev
       
-#     - name: Install Boost
-#       run: sudo apt-get install -yq libboost-dev libgsl-dev
+    - name: Install Boost
+      run: sudo apt-get install -yq libboost-dev libgsl-dev && ls -hl
       
-#     - name: Install Google Protobuf
+      
+    - name: Install Google Protobuf
+      
 #       run: sudo apt-get install autoconf automake libtool curl make g++ unzip && rm -rf Apps && mkdir Apps && cd Apps && 
 #             wget https://github.com/protocolbuffers/protobuf/releases/download/v3.11.0/protobuf-cpp-3.11.0.tar.gz && ls -l && 
 #             tar -xvzf protobuf-cpp-3.11.0.tar.gz && cd protobuf-3.11.0 && sudo ./configure && sudo make && sudo make check && make install &&
