--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -74,9 +74,7 @@ jobs:
       run: cd ${{github.workspace}}/Apps && sudo rm -rf r3.4.2.tar && sudo rm -rf mongo-cxx-driver-r3.4.2 &&      
            sudo wget https://github.com/mongodb/mongo-cxx-driver/archive/refs/tags/r3.4.2.tar.gz &&           
            sudo tar -xzf r3.4.2.tar.gz && cd mongo-cxx-driver-r3.4.2/build &&
-           sudo cmake ..                                \
-           -DCMAKE_BUILD_TYPE=Release          \
-           -DCMAKE_INSTALL_PREFIX=/usr/local &&
+           sudo cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local &&
            sudo make && sudo make install           
         
 #     - name: Create Build Environment
