--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -7,31 +7,23 @@ on:
     branches: [ master ]
 
 env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
 
 jobs:
   build:
-    # The CMake configure and build commands are platform agnostic and should work equally
-    # well on Windows or Mac.  You can convert this to a matrix build if you need
-    # cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
          
     - name: Install clang
-      run: |
-            sudo apt-get install -yq clang
+      run: sudo apt-get install -yq clang
       
     - name: Install Rapidjson   
-      run: |
-            sudo apt-get install -yq rapidjson-dev
+      run: sudo apt-get install -yq rapidjson-dev
       
     - name: Install Boost
-      run: |
-            sudo apt-get install -yq libboost-dev libgsl-dev && ls -hl
+      run:  sudo apt-get install -yq libboost-dev libgsl-dev && ls -hl
       
     - name: Cache Google Protobuf
       id: cache-google-protobuf
@@ -78,21 +70,7 @@ jobs:
            sudo cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local &&
            sudo make && sudo make install           
         
-#     - name: Create Build Environment
-#       run: cmake -E make_directory ${{github.workspace}}/build/C++
-#       working-directory: ${{github.workspace}}/C++/src
-      
-#     - name: Configure CMake
-#       shell: bash
-#       working-directory: ${{github.workspace}}/build/C++
-#       run: cmake $GITHUB_WORKSPACE/C++/src -DCMAKE_BUILD_TYPE=$BUILD_TYPE
-     
-#     - name: Build
-#       working-directory: ${{github.workspace}}/C++/build
-#       shell: bash    
-#       run: cmake --build . --config $BUILD_TYPE
-
-#     - name: Test
-#       working-directory: ${{github.workspace}}/build
-#       shell: bash
-#       run: ctest -C $BUILD_TYPE   
+    - name: Build CPP
+      working-directory: ${{github.workspace}}/C++/
+      shell: bash    
+      run: ./mackeClean.sh  
