--- a/.github/workflows/JavaMaven.yml
+++ b/.github/workflows/JavaMaven.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Setup Java 1.8
+    - name: Install Java 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
@@ -22,5 +22,6 @@ jobs:
         key: ${{ runner.os }}-maven-${{ hashFiles('Java/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: Build
+    
+    - name: Build Java
       run: cd Java && ./makeClean.sh
