--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
          
     - name: Install clang
-      run: sudo apt-get install -yq clang
+      run: sudo apt-get install -yq clang && sudo apt-get install -yq clang++ 
       
     - name: Install Rapidjson   
       run: sudo apt-get install -yq rapidjson-dev
@@ -63,13 +63,11 @@ jobs:
         key: ${{ runner.os }}-mongodb-cpp-driver-3.4.2
         
     - name: Install MongoDB-CPP-Driver
-      #if: steps.cache-mongodb-cpp-driver.outputs.cache-hit != 'true'
+      if: steps.cache-mongodb-cpp-driver.outputs.cache-hit != 'true'
       run: cd ${{github.workspace}}/Apps && sudo rm -rf r3.4.2.tar && sudo rm -rf mongo-cxx-driver-r3.4.2 &&      
            sudo wget https://github.com/mongodb/mongo-cxx-driver/archive/refs/tags/r3.4.2.tar.gz &&           
            sudo tar -xzf r3.4.2.tar.gz && cd mongo-cxx-driver-r3.4.2/build &&
-           sudo cmake ..                                \
-           -DCMAKE_BUILD_TYPE=Release          \
-           -DCMAKE_INSTALL_PREFIX=/usr/local &&
+           sudo cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr/local &&
            sudo make && sudo make install           
         
     - name: Build CPP
