--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
          
     - name: Install clang
-      run: sudo apt-get install -yq clang && sudo apt-get install -yq clang++ 
+      run: sudo apt-get install -yq clang
       
     - name: Install Rapidjson   
       run: sudo apt-get install -yq rapidjson-dev
