--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -6,17 +6,20 @@ project(C__)
 # set clang as the default compiler
 set(CMAKE_C_COMPILER "clang")
 set(CMAKE_CXX_COMPILER "clang++")
-# set(CMAKE_CXX_STANDARD 11)
 
 find_package(libmongocxx REQUIRED)
 find_package(libbsoncxx REQUIRED)
 include_directories(${LIBMONGOCXX_INCLUDE_DIR})
 include_directories(${LIBBSONCXX_INCLUDE_DIR})
-include_directories("/usr/local/include/mongocxx/v_noabi")
-include_directories("/usr/local/include/bsoncxx/v_noabi")
-include_directories("/usr/local/include/libmongoc-1.0")
-include_directories("/usr/local/include/libbson-1.0")
-include_directories("/usr/local/lib")
+
+#include_directories(${GSL_INCLUDE_DIRS})
+#include_directories(${GSL_INCLUDE_DIRS})
+
+#include_directories("/usr/local/include/mongocxx/v_noabi")
+#include_directories("/usr/local/include/bsoncxx/v_noabi")
+#include_directories("/usr/local/include/libmongoc-1.0")
+#include_directories("/usr/local/include/libbson-1.0")
+#include_directories("/usr/local/lib")
 
 
 # set the output directory
