--- a/C++/CMakeLists.txt
+++ b/C++/CMakeLists.txt
@@ -12,14 +12,18 @@ find_package(libbsoncxx REQUIRED)
 include_directories(${LIBMONGOCXX_INCLUDE_DIR})
 include_directories(${LIBBSONCXX_INCLUDE_DIR})
 
-#include_directories(${GSL_INCLUDE_DIRS})
-#include_directories(${GSL_INCLUDE_DIRS})
+include_directories("${LIBMONGOCXX_INCLUDE_DIR}/mongocxx/v_noabi")
+include_directories("${LIBBSONCXX_INCLUDE_DIR}/bsoncxx/v_noabi")
+include_directories("${LIBMONGOCXX_INCLUDE_DIR}/libmongoc-1.0")
+include_directories("${LIBBSONCXX_INCLUDE_DIR}/libbson-1.0")
+include_directories("/usr/local/lib")
 
 #include_directories("/usr/local/include/mongocxx/v_noabi")
 #include_directories("/usr/local/include/bsoncxx/v_noabi")
 #include_directories("/usr/local/include/libmongoc-1.0")
 #include_directories("/usr/local/include/libbson-1.0")
 #include_directories("/usr/local/lib")
+
 
 
 # set the output directory
