--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -73,4 +73,4 @@ jobs:
     - name: Build CPP
       #working-directory: ${{github.workspace}}/C++/
       #shell: bash    
-      run: cd C++ && ./makeClean.sh  
+      run: cd C++ && cmake . && make
