--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -48,7 +48,7 @@ jobs:
         
         
     - name: Install Mongo-C-Driver
-      #if: steps.cache-mongo-c-driver.outputs.cache-hit != 'true'
+      if: steps.cache-mongo-c-driver.outputs.cache-hit != 'true'
       run: sudo apt-get install libmongoc-1.0-0 && cd ${{github.workspace}}/Apps && sudo rm -rf mongo-c-driver-1.16.2.tar.gz && 
            sudo rm -rf mongo-c-driver-1.16.2 && 
            sudo wget https://github.com/mongodb/mongo-c-driver/releases/download/1.16.2/mongo-c-driver-1.16.2.tar.gz &&
@@ -63,7 +63,7 @@ jobs:
         key: ${{ runner.os }}-mongodb-cpp-driver-3.4.2
         
     - name: Install MongoDB-CPP-Driver
-      #if: steps.cache-mongodb-cpp-driver.outputs.cache-hit != 'true'
+      if: steps.cache-mongodb-cpp-driver.outputs.cache-hit != 'true'
       run: cd ${{github.workspace}}/Apps && sudo rm -rf r3.4.2.tar && sudo rm -rf mongo-cxx-driver-r3.4.2 &&      
            sudo wget https://github.com/mongodb/mongo-cxx-driver/archive/refs/tags/r3.4.2.tar.gz &&           
            sudo tar -xzf r3.4.2.tar.gz && cd mongo-cxx-driver-r3.4.2/build &&
