--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,12 +43,12 @@ jobs:
       id: cache-mongo-c-driver
       uses: actions/cache@v2
       with:
-        path: Apps/mongo-c-driver-1.16.2
+        path: /usr/local/include/libbson-1.0 #Apps/mongo-c-driver-1.16.2
         key: ${{ runner.os }}-mongo-c-driver-1.16.2
         
         
     - name: Install Mongo-C-Driver
-      if: steps.cache-mongo-c-driver.outputs.cache-hit != 'true'
+      #if: steps.cache-mongo-c-driver.outputs.cache-hit != 'true'
       run: sudo apt-get install libmongoc-1.0-0 && cd ${{github.workspace}}/Apps && sudo rm -rf mongo-c-driver-1.16.2.tar.gz && 
            sudo rm -rf mongo-c-driver-1.16.2 && 
            sudo wget https://github.com/mongodb/mongo-c-driver/releases/download/1.16.2/mongo-c-driver-1.16.2.tar.gz &&
