--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,8 +43,8 @@ jobs:
       id: cache-mongo-c-driver
       uses: actions/cache@v2
       with:
-        path: /usr/local/include/libbson-1.0 #Apps/mongo-c-driver-1.16.2
-        key: ${{ runner.os }}-mongo-c-driver-1.16.2
+        path: /usr/local/include/libbson-1.0 
+        key: ${{ runner.os }}-libbson-1.0
         
         
     - name: Install Mongo-C-Driver
@@ -59,8 +59,8 @@ jobs:
       id: cache-mongodb-cpp-driver
       uses: actions/cache@v2
       with:
-        path: /usr/local/include/mongocxx #Apps/mongodb-c-driver-3.4.2
-        key: ${{ runner.os }}-mongodb-cpp-driver-3.4.2
+        path: /usr/local/include/mongocxx
+        key: ${{ runner.os }}-mongocxx
         
     - name: Install MongoDB-CPP-Driver
       if: steps.cache-mongodb-cpp-driver.outputs.cache-hit != 'true'
