--- a/src/pom.xml
+++ b/src/pom.xml
@@ -24,6 +24,10 @@
 		<bson.version>3.11.2</bson.version>
 		<protobuf.version>4.0.0-rc-2</protobuf.version>
 		<flatbuffers.version>2.0.3</flatbuffers.version>
+		<commons-io.version>2.11.0</commons-io.version>
+		<commons-lang3.version>3.12.0</commons-lang3.version>
+
+
 
 	</properties>
 
@@ -114,6 +118,20 @@
 			<version>${flatbuffers.version}</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons-io.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -123,8 +141,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>8</source>
-					<target>8</target>
+					<source>11</source>
+					<target>11</target>
 				</configuration>
 			</plugin>
 			<plugin>
