--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,195 @@ Experiments/data/tweets.bin
 Experiments/data/tweets.bin.index
 Experiments/data/tweets.txt
 Experiments/data/tweets2.txt
+Experiments/data/out/tweets/Bson/0
+Experiments/data/out/tweets/Bson/0.index
+Experiments/data/out/tweets/Bson/1
+Experiments/data/out/tweets/Bson/1.index
+Experiments/data/out/tweets/Bson/2
+Experiments/data/out/tweets/Bson/2.index
+Experiments/data/out/tweets/Bson/3
+Experiments/data/out/tweets/Bson/3.index
+Experiments/data/out/tweets/Bson/4
+Experiments/data/out/tweets/Bson/4.index
+Experiments/data/out/tweets/Bson/5
+Experiments/data/out/tweets/Bson/5.index
+Experiments/data/out/tweets/Bson/6
+Experiments/data/out/tweets/Bson/6.index
+Experiments/data/out/tweets/Bson/7
+Experiments/data/out/tweets/Bson/7.index
+Experiments/data/out/tweets/Bson/8
+Experiments/data/out/tweets/Bson/8.index
+Experiments/data/out/tweets/Bson/9
+Experiments/data/out/tweets/Bson/9.index
+Experiments/data/out/tweets/Bson/10
+Experiments/data/out/tweets/Bson/10.index
+Experiments/data/out/tweets/Bson/11
+Experiments/data/out/tweets/Bson/11.index
+Experiments/data/out/tweets/ByteBuffer/0
+Experiments/data/out/tweets/ByteBuffer/0.index
+Experiments/data/out/tweets/ByteBuffer/1
+Experiments/data/out/tweets/ByteBuffer/1.index
+Experiments/data/out/tweets/ByteBuffer/2
+Experiments/data/out/tweets/ByteBuffer/2.index
+Experiments/data/out/tweets/ByteBuffer/3
+Experiments/data/out/tweets/ByteBuffer/3.index
+Experiments/data/out/tweets/ByteBuffer/4
+Experiments/data/out/tweets/ByteBuffer/4.index
+Experiments/data/out/tweets/ByteBuffer/5
+Experiments/data/out/tweets/ByteBuffer/5.index
+Experiments/data/out/tweets/ByteBuffer/6
+Experiments/data/out/tweets/ByteBuffer/6.index
+Experiments/data/out/tweets/ByteBuffer/7
+Experiments/data/out/tweets/ByteBuffer/7.index
+Experiments/data/out/tweets/ByteBuffer/8
+Experiments/data/out/tweets/ByteBuffer/8.index
+Experiments/data/out/tweets/ByteBuffer/9
+Experiments/data/out/tweets/ByteBuffer/9.index
+Experiments/data/out/tweets/ByteBuffer/10
+Experiments/data/out/tweets/ByteBuffer/10.index
+Experiments/data/out/tweets/ByteBuffer/11
+Experiments/data/out/tweets/ByteBuffer/11.index
+Experiments/data/out/tweets/Default/0
+Experiments/data/out/tweets/Default/0.index
+Experiments/data/out/tweets/Default/1
+Experiments/data/out/tweets/Default/1.index
+Experiments/data/out/tweets/Default/2
+Experiments/data/out/tweets/Default/2.index
+Experiments/data/out/tweets/Default/3
+Experiments/data/out/tweets/Default/3.index
+Experiments/data/out/tweets/Default/4
+Experiments/data/out/tweets/Default/4.index
+Experiments/data/out/tweets/Default/5
+Experiments/data/out/tweets/Default/5.index
+Experiments/data/out/tweets/Default/6
+Experiments/data/out/tweets/Default/6.index
+Experiments/data/out/tweets/Default/7
+Experiments/data/out/tweets/Default/7.index
+Experiments/data/out/tweets/Default/8
+Experiments/data/out/tweets/Default/8.index
+Experiments/data/out/tweets/Default/9
+Experiments/data/out/tweets/Default/9.index
+Experiments/data/out/tweets/Default/10
+Experiments/data/out/tweets/Default/10.index
+Experiments/data/out/tweets/Default/11
+Experiments/data/out/tweets/Default/11.index
+Experiments/data/out/tweets/FlatBuffers/0
+Experiments/data/out/tweets/FlatBuffers/0.index
+Experiments/data/out/tweets/FlatBuffers/1
+Experiments/data/out/tweets/FlatBuffers/1.index
+Experiments/data/out/tweets/FlatBuffers/2
+Experiments/data/out/tweets/FlatBuffers/2.index
+Experiments/data/out/tweets/FlatBuffers/3
+Experiments/data/out/tweets/FlatBuffers/3.index
+Experiments/data/out/tweets/FlatBuffers/4
+Experiments/data/out/tweets/FlatBuffers/4.index
+Experiments/data/out/tweets/FlatBuffers/5
+Experiments/data/out/tweets/FlatBuffers/5.index
+Experiments/data/out/tweets/FlatBuffers/6
+Experiments/data/out/tweets/FlatBuffers/6.index
+Experiments/data/out/tweets/FlatBuffers/7
+Experiments/data/out/tweets/FlatBuffers/7.index
+Experiments/data/out/tweets/FlatBuffers/8
+Experiments/data/out/tweets/FlatBuffers/8.index
+Experiments/data/out/tweets/FlatBuffers/9
+Experiments/data/out/tweets/FlatBuffers/9.index
+Experiments/data/out/tweets/FlatBuffers/10
+Experiments/data/out/tweets/FlatBuffers/10.index
+Experiments/data/out/tweets/FlatBuffers/11
+Experiments/data/out/tweets/FlatBuffers/11.index
+Experiments/data/out/tweets/Json/0
+Experiments/data/out/tweets/Json/0.index
+Experiments/data/out/tweets/Json/1
+Experiments/data/out/tweets/Json/1.index
+Experiments/data/out/tweets/Json/2
+Experiments/data/out/tweets/Json/2.index
+Experiments/data/out/tweets/Json/3
+Experiments/data/out/tweets/Json/3.index
+Experiments/data/out/tweets/Json/4
+Experiments/data/out/tweets/Json/4.index
+Experiments/data/out/tweets/Json/5
+Experiments/data/out/tweets/Json/5.index
+Experiments/data/out/tweets/Json/6
+Experiments/data/out/tweets/Json/6.index
+Experiments/data/out/tweets/Json/7
+Experiments/data/out/tweets/Json/7.index
+Experiments/data/out/tweets/Json/8
+Experiments/data/out/tweets/Json/8.index
+Experiments/data/out/tweets/Json/9
+Experiments/data/out/tweets/Json/9.index
+Experiments/data/out/tweets/Json/10
+Experiments/data/out/tweets/Json/10.index
+Experiments/data/out/tweets/Json/11
+Experiments/data/out/tweets/Json/11.index
+Experiments/data/out/tweets/Json+Gzip/0
+Experiments/data/out/tweets/Json+Gzip/0.index
+Experiments/data/out/tweets/Json+Gzip/1
+Experiments/data/out/tweets/Json+Gzip/1.index
+Experiments/data/out/tweets/Json+Gzip/2
+Experiments/data/out/tweets/Json+Gzip/2.index
+Experiments/data/out/tweets/Json+Gzip/3
+Experiments/data/out/tweets/Json+Gzip/3.index
+Experiments/data/out/tweets/Json+Gzip/4
+Experiments/data/out/tweets/Json+Gzip/4.index
+Experiments/data/out/tweets/Json+Gzip/5
+Experiments/data/out/tweets/Json+Gzip/5.index
+Experiments/data/out/tweets/Json+Gzip/6
+Experiments/data/out/tweets/Json+Gzip/6.index
+Experiments/data/out/tweets/Json+Gzip/7
+Experiments/data/out/tweets/Json+Gzip/7.index
+Experiments/data/out/tweets/Json+Gzip/8
+Experiments/data/out/tweets/Json+Gzip/8.index
+Experiments/data/out/tweets/Json+Gzip/9
+Experiments/data/out/tweets/Json+Gzip/9.index
+Experiments/data/out/tweets/Json+Gzip/10
+Experiments/data/out/tweets/Json+Gzip/10.index
+Experiments/data/out/tweets/Json+Gzip/11
+Experiments/data/out/tweets/Json+Gzip/11.index
+Experiments/data/out/tweets/Kryo/0
+Experiments/data/out/tweets/Kryo/0.index
+Experiments/data/out/tweets/Kryo/1
+Experiments/data/out/tweets/Kryo/1.index
+Experiments/data/out/tweets/Kryo/2
+Experiments/data/out/tweets/Kryo/2.index
+Experiments/data/out/tweets/Kryo/3
+Experiments/data/out/tweets/Kryo/3.index
+Experiments/data/out/tweets/Kryo/4
+Experiments/data/out/tweets/Kryo/4.index
+Experiments/data/out/tweets/Kryo/5
+Experiments/data/out/tweets/Kryo/5.index
+Experiments/data/out/tweets/Kryo/6
+Experiments/data/out/tweets/Kryo/6.index
+Experiments/data/out/tweets/Kryo/7
+Experiments/data/out/tweets/Kryo/7.index
+Experiments/data/out/tweets/Kryo/8
+Experiments/data/out/tweets/Kryo/8.index
+Experiments/data/out/tweets/Kryo/9
+Experiments/data/out/tweets/Kryo/9.index
+Experiments/data/out/tweets/Kryo/10
+Experiments/data/out/tweets/Kryo/10.index
+Experiments/data/out/tweets/Kryo/11
+Experiments/data/out/tweets/Kryo/11.index
+Experiments/data/out/tweets/ProtoBuf/0
+Experiments/data/out/tweets/ProtoBuf/0.index
+Experiments/data/out/tweets/ProtoBuf/1
+Experiments/data/out/tweets/ProtoBuf/1.index
+Experiments/data/out/tweets/ProtoBuf/2
+Experiments/data/out/tweets/ProtoBuf/2.index
+Experiments/data/out/tweets/ProtoBuf/3
+Experiments/data/out/tweets/ProtoBuf/3.index
+Experiments/data/out/tweets/ProtoBuf/4
+Experiments/data/out/tweets/ProtoBuf/4.index
+Experiments/data/out/tweets/ProtoBuf/5
+Experiments/data/out/tweets/ProtoBuf/5.index
+Experiments/data/out/tweets/ProtoBuf/6
+Experiments/data/out/tweets/ProtoBuf/6.index
+Experiments/data/out/tweets/ProtoBuf/7
+Experiments/data/out/tweets/ProtoBuf/7.index
+Experiments/data/out/tweets/ProtoBuf/8
+Experiments/data/out/tweets/ProtoBuf/8.index
+Experiments/data/out/tweets/ProtoBuf/9
+Experiments/data/out/tweets/ProtoBuf/9.index
+Experiments/data/out/tweets/ProtoBuf/10
+Experiments/data/out/tweets/ProtoBuf/10.index
+Experiments/data/out/tweets/ProtoBuf/11
+Experiments/data/out/tweets/ProtoBuf/11.index
