--- a/Experiments/conf/log4j.properties
+++ b/Experiments/conf/log4j.properties
@@ -2,6 +2,7 @@
 # Root logger option
 
 log4j.rootLogger=INFO, stdout, file
+#log4j.rootLogger=ERROR,console
 log4j.additivity.org.apache=false
  
 # Direct log messages to a log file
@@ -11,6 +12,7 @@ log4j.appender.file.MaxFileSize=100MB
 log4j.appender.file.MaxBackupIndex=1
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%m%n
+
  
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
